2006-09-13  Francis Kung  <fkung@redhat.com>

	* java/awt/image/ConvolveOp.java (filter(Raster, WritableRaster)):
	Removed hard-coded max sample value.
	* java/awt/image/RescaleOp.java (filter(Raster, WritableRaster)): 
	Fixed finding of max sample value.

2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(setPaint): Check null argument ('p').

2006-09-12  Francis Kung  <fkung@redhat.com>

	PR 27940
	* gnu/java/awt/java2d/TexturePaintContext.java
	(constructor): Fixed typo, getMinY instead of getMaxX.
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(setPaint): Implemented support for custom Paint classes.
	(setPaintPixels): Renamed from setTexturePixels, added repeat parameter.
	(setTexturePixels): Renamed to setPaintPixels, added repeat parameter.
	* include/gnu_java_awt_peer_gtk_CairoGraphics2D.h: Renamed setTexturePixels
	to setPaintPixels, and added repeat parameter.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoGraphics2D.c:
	 Renamed setTexturePixels to setPaintPixels, and added repeat parameter.

2006-09-12  Gary Benson  <gbenson@redhat.com>

	* java/net/NetworkInterface.java (getInetAddresses):
	Fix port used in security check.

2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/DefaultMetalTheme.java
	(CONTROL_TEXT_FONT): Renamed 'controlTextFont',
	(MENU_TEXT_FONT): Renamed 'menuTextFont',
	(getControlTextFont): Check 'swing.boldMetal' setting before 
	initialising font,
	(getMenuTextFont): Likewise.

2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/OceanTheme.java
	(addCustomEntriesToTable): Added 'List.focusCellHighlightBorder' entry.

2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(InternalFrameDefaultMenuIcon.paintIcon): Use theme colors.

2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>
