@@ -279,6 +279,10 @@ public class PipedInputStream extends InputStream
     if (closed)
       throw new IOException ("Pipe closed");
 
+    // Don't block if nothing was requested.
+    if (len == 0)
+      return 0;
+
     // If the buffer is empty, wait until there is something in the pipe 
     // to read.
     try
